--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,7 +1,17 @@
 server {
 	listen 80;
+   	
+	root /home/box/web;
+	server_name "";
+ 	
+	access_log /home/box/web/my_log.log;
 	
-	location / {
+	location ~* \/uploads\/ {
+		root  /home/box/web;
+	}
+
+	location ~* \.(.+)$ {
+		root  /home/box/web/public/;
 	}
 }
 
