--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,3 +1,8 @@
+upstream app_servers {
+
+        server 127.0.0.1:8080;
+
+    }
 server {
 	listen 80;
    	
@@ -12,6 +17,18 @@ server {
 
 	location ~* \.(.+)$ {
 		root  /home/box/web/public/;
-	}
+
+        }
+ 	location /hello/ {
+
+            proxy_pass         http://app_servers;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+
+        }
+
 }
 
